// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component Should Exist 1`] = `[Function]`;

exports[`Menu component Should accept a react Element as renderAs prop 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <span>
        Custom
        Dashboard
      </span>
    </li>
    <li>
      <span>
        Custom
        Customer
      </span>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should concat Menu.List to display as submenus 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <a>
        <li>
          <a
            className="is-active"
          >
            Manage Your Team
          </a>
          <ul
            className="menu-list"
          >
            <li>
              <a>
                Members
              </a>
            </li>
            <li>
              <a
                className="is-active"
              >
                Plugins
              </a>
            </li>
            <li>
              <a>
                Add a member
              </a>
            </li>
          </ul>
        </li>
      </a>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should have menu classnames 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <a>
        Customer
      </a>
    </li>
  </ul>
</aside>
`;

exports[`Menu component Should render custom item child 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        <p>
          Custom children 1
        </p>
      </a>
    </li>
    <li>
      <a>
        <a>
          Custom children 2
        </a>
      </a>
    </li>
  </ul>
</aside>
`;
